force-app/main/default/objects/Attachment_Configuration__c/Attachment_Configuration__c.object-meta.xml
<CustomObject>
    <label>Attachment Configuration</label>
    <nameField>
        <displayFormat>AC-{0}</displayFormat>
        <label>Attachment Configuration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachment Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>