force-app/main/default/objects/Attachment_Configuration__c/fields/Attachment_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Criteria__c</fullName>
    <label>Attachment Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>