force-app/main/default/objects/Attachment_Configuration__c/fields/Not_Subject_to_PRA__c.field-meta.xml
<CustomField>
    <fullName>Not_Subject_to_PRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Subject to PRA</label>
    <type>Checkbox</type>
</CustomField>