force-app/main/default/objects/Attachment_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Type__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Attachment_Operator__c</columns>
    <columns>Attachment_Criteria__c</columns>
    <columns>Attorney_Client_Privilege__c</columns>
    <columns>Confidential__c</columns>
    <columns>Not_Subject_to_PRA__c</columns>
    <columns>History_Object_Configuration__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>